Fix wrong background color for softdropdown highlight
... and apply new fix for missing margin in network panels
search box.

R=bmeurer@chromium.org

Fixed:1382663,1377219
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4037664
Commit-Queue: Yang Guo <yangguo@chromium.org>

--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -340,7 +340,7 @@ select.toolbar-item:disabled {
   opacity: 50%;
 }
 
-button.soft-dropdown.toolbar-item:focus-visible,
+button.toolbar-item:focus-visible,
 select.toolbar-item:focus-visible {
   background: var(--color-background-elevation-2);
   border-radius: 2px;
@@ -438,6 +438,7 @@ select.toolbar-item:focus-visible > * {
 }
 
 input[is="history-input"] {
+  margin: 0 1px;
   border: 1px solid transparent;
   line-height: 16px;
   padding: 1px;
